welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: not found: value poseBrosse
    poseBrosse();
    ^